<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlottaDroid</string>
    <string name="hello_world">F L O T T A D R O I D!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main menu</string>
    <string name="menu_search">Search</string>
    <string name="pull_to_refresh_pull_label">Pull to update!</string>
    <string name="pull_to_refresh_release_label">Stop!</string>
    <string name="pull_to_refresh_refreshing_label">Update...</string>
    <string name="pull_to_refresh_tap_label">Tap to update!</string>
    <string name="title_activity_splash">FlottaDroid</string>
    <string name="splashText">S P L A S H S Z Ö V E G</string>
    <string name="title_activity_login">Enter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_jobs">Jobs</string>
    <string name="title_section1">Available jobs</string>
    <string name="title_section2">Chosen jobs</string>
    <string name="title_section3">Jobs</string>
    <string name="title_activity_admin">Admin</string>
    <string name="no_internet">Connection error!</string>
    <string name="refresh">Update</string>
    <string name="refreshed">Done!</string>
    <string name="wrongCredential">Access denied!</string>
    <string name="drivers">Drivers</string>
    <string name="jobs">Munkák</string>
    <string name="partners">Partners</string>
    <string name="pictures">Images</string>
    <string name="errorRefresh">An error occurred!</string>
    <string name="autos">Vehicles</string>
    <string name="sites">Places</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_car">Vehicles</string>
    <string name="title_activity_contact_activty">Business cards</string>
    <string name="title_activity_refresh">Update</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_munka_details">Job</string>
    <string name="menuSort">Sort</string>
    <string name="menuSearch">Search</string>
    <string name="invalidUser">User doesn\'t exist!</string>
    <string name="logout">Log out</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="fuelLabel">Fuel:</string>
    <string name="munkaDateLabel">Date:</string>
    <string name="munkaSaveButton">Pick a job</string>
    <string name="munkaBeginLabel">Start:</string>
    <string name="munkaendLabel">End:</string>
    <string name="munkaDatePickerButton">Set starting time</string>
    <string name="autoKilometerOra">Speedometer:</string>
    <string name="munkaKoltsegLabel">Cost:</string>
    <string name="munkaBevetelLabel">Income:</string>
    <string name="munkaFelvetelUtkozes">There\'s an active job at the selected date!</string>
    <string name="lastSyncTime">Last update:</string>
    <string name="tasksToUpload">Need to be synchronized:</string>
    <string name="picsToUpload">Images to upload</string>
    <string name="picsUpload">Upload images</string>
    <string name="munkaFelvetelNullTime">Set starting time!</string>
    <string name="title_activity_new_job">New job</string>
    <string name="newJobNoEstimatedTime">Set estimated time!</string>
    <string name="title_activity_sofor_details">Driver</string>
    <string name="title_activity_partner_details">Partner</string>
    <string name="title_cars_section2">Vans</string>
    <string name="title_cars_section1">Cars</string>
    <string name="title_activity_telephely_details">Places</string>
    <string name="title_partners">Partners</string>
    <string name="title_soforok">Drivers</string>
    <string name="title_activity_car_details">Car details</string>
    <string name="title_cars_section3">Bus</string>
    <string name="title_cars_section4">Camion</string>
    <string name="title_cars_section5">Van</string>
    <string name="title_cars_section6">Truck</string>
    <string name="title_activity_car_admin_details">Car</string>
    <string name="denided_autofelvetel">Deselect your active vehicle first!</string>
    <string name="menu_sendcsv">Küldés</string>
    <string name="title_activity_sofor_user_details">Driver</string>
    <string name="title_activity_partner_web_view">Partner web page</string>
    <string name="title_activity_push_notification_list">Messages</string>
    <string name="menuMessages">Üzenetek</string>
    <string name="old_password">Régi jelszó</string>
    <string name="new_password">Új jelszó</string>
    <string name="save">Mentés</string>
    <string name="cancel">Mégse</string>
    <string name="felhasznaloiAdatok">Felhasználói adatok</string>
    <string name="jelszovaltoztatas">Jelszó változtatás</string>
    <string name="szinkAdatok">Szinkronizáció</string>
    <string name="wifiSettingsSummary">Képek szinkronizációja csak wifi-n keresztül</string>
    <string name="picsSettingsWifi">Csak wifi használata</string>
    <string name="settingsPWChanged">Jelszó megváltoztatva!</string>
    <string name="settingsPWNotSame">Az új jelszavak nem egyeznek meg!</string>
    <string name="PWRequired">Jelszó megadása kötelező!</string>
    <string name="settingsPWOldError">Régi jelszó nem megfelelő!"</string>
    <string name="passwordChange">Jelszó változtatás</string>
	<string name="passwordSummary">Jelszó beállítása</string>
	<string name="name">Név:</string>
	<string name="type">Típus</string>
	<string name="kmhour">Km óra:</string>
	<string name="last_szerviz">Utolsó szervíz:</string>
	<string name="muszakiVizsga">Műszaki vizsga:</string>
	<string name="rendszam">Rendszám:</string>
	<string name="uzemanyag">Üzemanyag:</string>
	<string name="telephely">Telephely:</string>
	<string name="lastModifity">Utolsó módosítás:</string>
	<string name="lastTelephely">Utolsó telephely:</string>
	<string name="lastSofor">Utolsó sofőr:</string>
	<string name="lefoglal">Lefoglal</string>
	<string name="belepes">Belépés</string>
	<string name="password">Jelszó:</string>
	<string name="felhasznalo">Felhasználó:</string>
	<string name="date">date</string>
	<string name="veglegesit">Véglegesít</string>
	<string name="partner">Partner:</string>
	<string name="sofor">Sofőr:</string>
	<string name="munkatipus">Munkatipus:</string>
	<string name="estimatedTime">Becsült idő:</string>
	<string name="dateChooser">Dátum választás</string>
	<string name="nev">Név:</string>
	<string name="address">Cím:</string>
	<string name="telefon">Telefon:</string>
	<string name="email">Email:</string>
	<string name="web">Web:</string>
	<string name="xkoord">X:</string>
	<string name="ykoord">Y:</string>
	<string name="cim">Cím:</string>
	<string name="login">Login:</string>
	<string name="pass">Pass:</string>
	<string name="birthdate">Születési dátum:</string>
	<string name="birthDate">Szül dátum</string>
	<string name="soforokString">Sofőrök</string>
	<string name="partnerek">Partnerek</string>
	<string name="cars">Autók</string>
	<string name="messageViaFlotta">Üzenet via FlottaDroid</string>
	<string name="newJob">Új munka</string>
	<string name="newPartner">Új partner</string>
	<string name="newSofor">Új sofőr</string>
	<string name="newTelephely">Új telephely</string>
	<string name="newAuto">Új autó</string>
	<string name="newMunka">Új munka</string>
	<string name="promptDel">Biztosan törli?</string>
	<string name="yes">Igen</string>
	<string name="no">Nem</string>
	<string name="torles">Törlés</string>
	<string name="autok">Autók</string>
	<string name="foglalt">Foglalt</string>
	<string name="muszaki">Műszaki vizsga</string>
	<string name="szerviz">Szervíz idő</string>
	<string name="freeJobs">Szabad munkák</string>
	<string name="time">Idő</string>
	<string name="sort">Rendezés</string>
	<string name="leadas">Leadás</string>
	<string name="pictureSaved">"  kép mentve!"</string>
	<string name="refreshing">Frissítés</string>
	<string name="kepekletoltese">Képek letöltése...</string>
	<string name="adatokRefresh">Adatok frissítése...</string>
	<string name="uploadingpictures">Képek feltöltése...</string>
	<string name="forgetdriver">Elfelejtett az utolsó sofõrt megadni!</string>
	<string name="forgettelephely">Elfelejtett utolsó telephelyet megadni!</string>
	<string name="forgetlastszerviz">Elfelejtett utolsó szervízt megadni!</string>
	<string name="forgetuzemanyag">Elfelejtett üzemanyagot megadni!</string>
	<string name="forgetkm">Elfelejtett km-t megadni!</string>
	<string name="forgetmuszvizsga">Elfelejtett mûszaki vizsga dátumot megadni!</string>
	<string name="forgetrendszam">Elfelejtett rendszámot megadni!</string>
	<string name="forgetmunkatipus">Elfelejtett tipust megadni!</string>
	<string name="forgetnev">Elfelejtett nevet megadni!</string>
	<string name="nocarforjob">Nincs autó felvéve az aktív munkáihoz!</string>
	<string name="pickcar">Kérem vegyen fel egyet!</string>
	<string name="activejobs">Aktív munkák</string>
	<string name="pickCarJob">Kérem vegyen fel egy autót!</string>
	<string name="forgetname">Elfelejtett nevet megadni!</string>
	<string name="forgetaddress">Elfelejtett címet megadni!</string>
	<string name="forgettel">Elfelejtett telefonszámot megadni!</string>
	<string name="forgetemail">Elfelejtett email címet megadni!</string>
	<string name="forgetx">Elfelejtett x koordinátát megadni!</string>
	<string name="forgety">Elfelejtett y koordinátát megadni!</string>
	<string name="forgetweb">Elfelejtett web oldalt megadni!</string>
	<string name="forgetbirth">Elfelejtett születési dátumot megadni!</string>
	<string name="forgetpass">Elfelejtett jelszót megadni!</string>
	<string name="forgetlogin">Elfelejtett login nevet megadni!</string>
</resources>