<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>    
        
    <item
        android:id="@+id/new_job"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/newJob"/>
    
    <item
        android:id="@+id/new_partner"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/newPartner"/>  
        
    <item
        android:id="@+id/new_sofor"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/newSofor"/>
    
    <item
        android:id="@+id/new_telephely"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/newTelephely"/>   
        
    <item
        android:id="@+id/new_car"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/newAuto"/>  
    

</menu>