<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/logout"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/refresh">
    </item>
    <item
        android:id="@+id/menu_messages"
        android:showAsAction="always|withText"
        android:title="@string/menuMessages"
        android:icon="@drawable/ic_message">
    </item>

</menu>