<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newjobscrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_main_activity" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewJobActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partner"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/textview_back" />

        <Spinner
            android:id="@+id/spinnerPartners"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
       android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sofor"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/textview_back" />

        <Spinner
            android:id="@+id/spinnerSoforok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
       android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/munkatipus"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/textview_back" />

        <Spinner
            android:id="@+id/spinnerMunkatipus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
       android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephely"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/textview_back" />

        <Spinner
            android:id="@+id/spinnerTelephely"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
       android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/estimatedTime"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/textview_back" />

        <EditText
            android:id="@+id/editTextEstimatedTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonDateSelect"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:text="@string/dateChooser" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="date"
        android:background="@drawable/textview_back" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="162dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal|top"
        android:paddingTop="20dp"
        android:text="@string/save" />

</LinearLayout>


</ScrollView>